Improve Akari's mobile browsing views (#178)
